@@ -20,6 +20,12 @@ preinstall=install rebuild$EXE_EXT $BIN_PREFIX ; \
     install rebuild.conf/dmd-win-tango $ETC_PREFIX/rebuild
 
 version (Posix) {
+    # install the rerun link
+    preinstall+=; \
+        ln -sf rebuild $BIN_PREFIX/rerun
+}
+
+version (Posix) {
     version (GNU) {
         preinstall+=; \
             install dymoduleinit.d $LIB_PREFIX
